16_subseq/grade.txt
Grading at Mon Jun  8 13:11:03 UTC 2020
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:19:5: error: invalid type argument of unary ‘*’ (have ‘int’)
  if(*(n<1)||array==NULL){
     ^
maxSeq.c:25:3: error: expected ‘)’ before ‘for’
   for(i=0;i<n;i++){
   ^
maxSeq.c:42:1: error: expected expression before ‘}’ token
 }
 ^
maxSeq.c:9:10: error: unused variable ‘j’ [-Werror=unused-variable]
   size_t j=0;
          ^
maxSeq.c:8:10: error: unused variable ‘i’ [-Werror=unused-variable]
   size_t i=0;
          ^
maxSeq.c:6:10: error: unused variable ‘current_seq’ [-Werror=unused-variable]
   size_t current_seq=0;
          ^
maxSeq.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
